--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
   <div class="container" role="document">
     <header>
       <div class="brand" aria-label="Brand">
-        <div class="logo" aria-hidden="true">KO</div>
+        <div class="logo" aria-hidden="true"> <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t39.30808-6/476961882_1931331720947399_1162569318553689538_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=P0FLPCCf2LAQ7kNvwEAhOuN&_nc_oc=Adkdi2JTzspKJiXEsOgi-m2HYISPcuBM0mLe6TZlBfstHVhFxWlb482qwpdrg1CY-a0&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&_nc_gid=zzAKqWvcwuVDhERetu0C_Q&oh=00_AfhY-L6BgTMC3J8O1-rQG94Fn0dHiEnkUYyRW22MX3uUsA&oe=690D09FC"
+                     alt="Kobe Lean P. Orteza" onload="photoLoaded(this)"></div>
         <div>
           <div style="font-weight:800">Kobe Lean P. Orteza</div>
           <div class="small muted">BS AI Engineering — Mapúa University</div>
@@ -306,7 +307,8 @@
         </aside>
       </div>
 
- 
+/ about me 
+      
       <section id="about" class="card fade-up" aria-labelledby="about-heading" style="animation-delay:.4s">
         <h2 id="about-heading">About Me</h2>
         <div class="neon-line" aria-hidden="true"></div>
