--- a/index.html
+++ b/index.html
@@ -225,14 +225,15 @@
       :root{ --holo-size:132px; }
       .hero{grid-template-columns:1fr}
     }
-
-  </style>
+    
+</style>
 </head>
 <body>
   <div class="container" role="document">
     <header>
       <div class="brand" aria-label="Brand">
-        <div class="logo" aria-hidden="true">KO<div>
+        <div class="logo" aria-hidden="true">KO</div>
+        <div>
           <div style="font-weight:800">Kobe Lean P. Orteza</div>
           <div class="small muted">BS AI Engineering — Mapúa University</div>
         </div>
