--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
       :root{ --holo-size:132px; }
       .hero{grid-template-columns:1fr}
     }
+
+    .logo-img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #00eaff;
+  box-shadow: 0 0 8px rgba(0, 234, 255, 0.6);
+}
+
     
 </style>
 </head>
@@ -232,7 +242,8 @@
   <div class="container" role="document">
     <header>
       <div class="brand" aria-label="Brand">
-        <div class="logo" aria-hidden="true">KO</div>
+        <img src=https://scontent.fmnl17-5.fna.fbcdn.net/v/t39.30808-6/481033214_1945116122902292_5004476938312416757_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=xnaQ4xhBIwAQ7kNvwF9Vu6-&_nc_oc=Adk-meIEqCxmDQMoHleMPfoweSkvLtEPAF-guFXQDZ4cYF1NBlPboxjjuc8tRy60xHA&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&_nc_gid=gYuD5emb7OZVlbY-ixOBzQ&oh=00_AfiIGEpv7CmrsCXZnk_8hfrIDkIgmTTRfLvSP_cz0E4GxA&oe=690CF1A8 alt="Kobe Orteza" class="logo-img">
+
         <div>
           <div style="font-weight:800">Kobe Lean P. Orteza</div>
           <div class="small muted">BS AI Engineering — Mapúa University</div>
