--- a/index.html
+++ b/index.html
@@ -298,31 +298,29 @@
 
        <aside class="profile-card fade-up" aria-labelledby="contact-block" style="animation-delay:.3s">
 
-  <div class="avatar" aria-hidden="true">
-    <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t39.30808-6/495779410_2002981103782460_1920947479628305935_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=oiMWX-oXjKkQ7kNvwGVLArC&_nc_oc=AdnLkqVmVbMj0Qmby8IvTB4pseyjc3DSjREJVk7ZzhGINj3wgZ4WIB3H0rCgBn_mA1E&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&_nc_gid=nqTM2zR_CXYVEgnTuhejkQ&oh=00_AfjjPmhkmidrsophuCXWm9U-F5IBTN9LstyJyaIpa0t00Q&oe=690CF3E0" 
-         alt="Kobe Lean P. Orteza" 
-         style="width:100%; height:100%; border-radius:50%;">
+ <div class="avatar" aria-hidden="true">
+  <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t39.30808-6/495779410_2002981103782460_1920947479628305935_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=oiMWX-oXjKkQ7kNvwGVLArC&_nc_oc=AdnLkqVmVbMj0Qmby8IvTB4pseyjc3DSjREJVk7ZzhGINj3wgZ4WIB3H0rCgBn_mA1E&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&_nc_gid=nqTM2zR_CXYVEgnTuhejkQ&oh=00_AfjjPmhkmidrsophuCXWm9U-F5IBTN9LstyJyaIpa0t00Q&oe=690CF3E0" 
+       alt="Kobe Lean P. Orteza" 
+       style="width:100%; height:100%; border-radius:50%;">
+</div>
+
+<div style="font-weight:700; margin-top:12px;">Kobe Lean P. Orteza</div>
+<div class="small muted" style="margin-top:6px;">BS AI Engineering • Mapúa University</div>
+
+<div id="contact-block" class="contact-list" role="contentinfo" style="margin-top:12px;">
+  <div class="small muted">📍 Manila, Philippines</div>
+  <div class="small" style="margin-top:4px;">
+    ✉️ <a class="code" href="mailto:kobeazetro@gmail.com">kobeazetro@gmail.com</a><br>
+    📱 <a class="code" href="tel:+639564816314">0956 481 6314</a><br>
+    🔗 <a class="code" href="https://github.com/KobeOrteza" target="_blank" rel="noopener">Git: KobeOrteza</a>
   </div>
 
-  <div style="font-weight:700;margin-top:12px">Kobe Lean P. Orteza</div>
-  <div class="small muted" style="margin-top:6px">BS AI Engineering • Mapúa University</div>
+  <!-- Contact button below the contacts -->
+  <div style="margin-top:12px;">
+    <a class="btn" href="#contact">Contact</a>
+  </div>
+</div>
 
-  <div id="contact-block" class="contact-list" role="contentinfo">
-    <div class="small muted">📍 Manila, Philippines</div>
-    <div class="small" style="margin-top:4px">
-      ✉️ <a class="code" href="mailto:kobeazetro@gmail.com">kobeazetro@gmail.com</a><br>
-      📱 <a class="code" href="tel:+639564816314">0956 481 6314</a><br>
-      🔗 <a class="code" href="https://github.com/KobeOrteza" target="_blank" rel="noopener">Git: KobeOrteza</a>
-    </div>
-</aside>
-
-
-            <div style="margin-top:12px">
-              <a class="btn" href="#contact">Contact</a>
-            </div>
-          </div>
-        </aside>
-      </div>
 
       
       <section id="about" class="card fade-up" aria-labelledby="about-heading" style="animation-delay:.4s">
