--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
   <div style="margin-top:12px;">
     <a class="btn" href="#contact">Contact</a>
   </div>
-</div>
-
+       </aside>
+      </div>
 
          
 
