--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       <section id="contact" class="card fade-up" aria-labelledby="contact-heading" style="animation-delay:.9s">
         <h2 id="contact-heading">Contact</h2>
         <div class="neon-line" aria-hidden="true"></div>
-        <p class="small muted">I’m open to research collaborations, mentorship, internships, and creative projects. Replace links below with the exact URLs you prefer before publishing.</p>
+        <p class="small muted">I’m open to research collaborations, mentorship, internships, and creative projects.</p>
 
         <div class="grid" style="margin-top:12px">
           <div class="card">
