--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ In the future, I aspire to contribute to projects that merge AI research and com
     </main>
 
     <footer>
-      Made with ⚙️ • Kobe Lean P. Orteza • <span class="muted">Futuristic AI Theme</span>
+      Made with Github • Kobe Lean P. Orteza • <span class="muted">Modern Theme</span>
     </footer>
   </div>
 
