--- a/index.html
+++ b/index.html
@@ -235,6 +235,28 @@
   box-shadow: 0 0 8px rgba(0, 234, 255, 0.6);
 }
 
+    .reflections-section {
+  max-width: 900px;
+  margin: 80px auto;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 20px;
+  padding: 40px;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
+  line-height: 1.8;
+}
+
+.reflections-section h2 {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 1.8rem;
+}
+
+.reflections-section p {
+  margin-bottom: 20px;
+  color: #e6e6e6;
+}
+
+
     
 </style>
 </head>
@@ -367,6 +389,30 @@
           </div>
         </div>
       </section>
+
+
+      <section id="reflections" class="reflections-section">
+  <h2>Reflections & Blog</h2>
+  <p>
+    When I first entered the <strong>BS Artificial Intelligence Engineering</strong> program at <strong>Mapúa University</strong>, I honestly didn’t know what to expect. I had always been fascinated by robotics, programming, and creative technology — but college brought a deeper layer of discipline, collaboration, and purpose to that fascination. Every week feels like a balance between curiosity and challenge, as I learn to combine mathematical logic with human-centered thinking. 
+  </p>
+  <p>
+    At first, I was intimidated by how fast-paced the environment at Mapúa can be. The coursework, the deadlines, and the expectations — they can be tough. But over time, I realized that this pressure trains us to think critically and manage time like real engineers. My professors constantly remind us that AI Engineering isn’t just about algorithms or code; it’s about <em>building systems that understand people</em>. That idea reshaped the way I see the field — not just as a technical discipline, but as a creative and ethical one.
+  </p>
+  <p>
+    One of my favorite experiences so far has been collaborating with classmates on simple prototypes that use sensors, machine learning concepts, and design thinking. It’s always exciting to see something go from an idea on paper to a working demo. The process can be messy — code errors, hardware malfunctions, and sleepless debugging nights — but when things finally work, there’s a sense of accomplishment that makes it all worth it. These small victories remind me why I chose this path: to create, to learn, and to innovate.
+  </p>
+  <p>
+    Beyond the technical side, I’ve also learned how vital creativity and empathy are in this field. AI is not just about building smarter machines — it’s about building <strong>better futures</strong>. I’ve grown to appreciate how art and engineering can complement each other. Designing interfaces, writing about projects, and expressing ideas visually are just as important as writing efficient code. I think that’s what makes AI Engineering at Mapúa so special — it trains us to be holistic thinkers, not just programmers.
+  </p>
+  <p>
+    As I continue my journey, I hope to explore more about <strong>ethical AI</strong>, robotics, and human-computer interaction. I want to design technologies that don’t just automate tasks, but truly help people — especially in education, accessibility, and healthcare. My goal is to carry the lessons I learn here into real-world projects that reflect compassion, curiosity, and purpose. This portfolio is a small reflection of that mission: to grow as an engineer, artist, and innovator, all at once.
+  </p>
+  <p>
+    <em>— Written by Kobe Lean P. Orteza, 1st Year AI Engineering Student, Mapúa University</em>
+  </p>
+</section>
+
 
       <!-- rest of site (unchanged but with entrance reveals) -->
       <section id="portfolio" class="card fade-up" aria-labelledby="portfolio-heading" style="animation-delay:.5s">
