--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#achievements">Achievements</a>
         <a href="#contact">Contact</a>
+        <a href="#reflections" class="btn secondary">Read Reflections</a>
+
       </nav>
     </header>
 
@@ -392,7 +394,7 @@
 
 
       <section id="reflections" class="reflections-section">
-  <h2>Reflections & Blog</h2>
+  <h2>Reflections</h2>
   <p>
     When I first entered the <strong>BS Artificial Intelligence Engineering</strong> program at <strong>Mapúa University</strong>, I honestly didn’t know what to expect. I had always been fascinated by robotics, programming, and creative technology — but college brought a deeper layer of discipline, collaboration, and purpose to that fascination. Every week feels like a balance between curiosity and challenge, as I learn to combine mathematical logic with human-centered thinking. 
   </p>
