--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       --neon: #00f0ff;
       --accent: #8b5cf6;
       --glass: rgba(255,255,255,0.03);
-      --radius: 12px;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
+      --radius: 16px;
+      font-family: 'Inter', sans-serif;
       color-scheme: dark;
     }
 
@@ -21,83 +21,116 @@
       background: radial-gradient(1200px 600px at 10% 10%, rgba(139,92,246,0.06), transparent),
                   radial-gradient(800px 400px at 90% 90%, rgba(0,240,255,0.03), transparent),
                   var(--bg);
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
-      color: #e6eef8;
+      perspective: 1000px;
     }
 
-    /* Particles container */
+    /* Particles / AI floating nodes */
     #particles-js {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top:0; left:0;
+      width: 100%; height: 100%;
       z-index: -1;
       pointer-events: none;
     }
 
     .start-card {
-      background: linear-gradient(180deg, var(--glass), rgba(255,255,255,0.02));
-      border: 1px solid rgba(255,255,255,0.04);
-      padding: 40px 60px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.01));
+      border: 1px solid rgba(255,255,255,0.1);
+      padding: 50px 70px;
       border-radius: var(--radius);
-      box-shadow: 0 10px 40px rgba(11,12,20,0.6);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.8), 0 0 60px rgba(0,240,255,0.3);
       text-align: center;
-      animation: fadeIn 1s ease forwards;
+      backdrop-filter: blur(12px);
+      transform-style: preserve-3d;
+      animation: fadeIn 1.2s ease forwards;
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* Floating AI elements */
+    .floating-hex {
+      position: absolute;
+      width: 80px;
+      height: 80px;
+      border: 2px solid var(--neon);
+      clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0 50%);
+      opacity: 0.15;
+      animation: floatHex linear infinite;
+      transform-origin: center;
+    }
+
+    .floating-hex:nth-child(1) { top: 10%; left: 15%; animation-duration: 12s; }
+    .floating-hex:nth-child(2) { top: 70%; left: 25%; animation-duration: 16s; }
+    .floating-hex:nth-child(3) { top: 30%; left: 70%; animation-duration: 10s; }
+    .floating-hex:nth-child(4) { top: 50%; left: 50%; animation-duration: 14s; }
+
+    @keyframes floatHex {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-30px) rotate(180deg); }
+      100% { transform: translateY(0) rotate(360deg); }
     }
 
     h1 {
-      margin: 0;
-      font-size: 36px;
-      letter-spacing: 1px;
+      margin: 0 0 16px;
+      font-size: 3rem;
       color: var(--neon);
-      margin-bottom: 16px;
+      letter-spacing: 1px;
+      text-shadow: 0 0 12px var(--neon), 0 0 24px var(--accent);
     }
 
     p {
-      margin: 8px 0 24px;
+      margin: 8px 0 28px;
       color: rgba(230,238,248,0.7);
       font-weight: 500;
     }
 
     .btn-enter {
       display: inline-block;
-      padding: 12px 24px;
-      border-radius: 12px;
+      padding: 14px 28px;
+      border-radius: 14px;
       font-weight: 700;
+      font-size: 1.1rem;
       background: linear-gradient(90deg, var(--neon), var(--accent));
       color: #071028;
       border: none;
       cursor: pointer;
-      font-size: 16px;
       text-decoration: none;
-      transition: transform .2s ease, box-shadow .2s ease;
+      transition: transform .3s ease, box-shadow .3s ease;
+      box-shadow: 0 6px 20px rgba(0,240,255,0.3);
     }
+
     .btn-enter:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 12px 28px rgba(0,240,255,0.4);
+      transform: translateY(-5px) scale(1.05);
+      box-shadow: 0 12px 40px rgba(0,240,255,0.5);
     }
 
     @keyframes fadeIn {
-      from {opacity:0; transform: translateY(20px);}
-      to {opacity:1; transform: translateY(0);}
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <!-- Particles container -->
+
   <div id="particles-js"></div>
 
   <div class="start-card">
     <h1>Kobe Lean P. Orteza</h1>
     <p>AI Engineering Student | Innovator • Robotics • Ethical AI</p>
     <a class="btn-enter" href="main.html">Enter Portfolio</a>
+
+    <!-- Floating AI hexes -->
+    <div class="floating-hex"></div>
+    <div class="floating-hex"></div>
+    <div class="floating-hex"></div>
+    <div class="floating-hex"></div>
   </div>
 
-  <!-- tsparticles for interactive background -->
+  <!-- tsparticles interactive nodes -->
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.13.1/tsparticles.bundle.min.js"></script>
   <script>
     tsParticles.load("particles-js", {
@@ -109,18 +142,18 @@
           resize: true
         },
         modes: {
-          repulse: { distance: 120, duration: 0.4 },
+          repulse: { distance: 150, duration: 0.4 },
           push: { quantity: 4 }
         }
       },
       particles: {
-        number: { value: 50, density: { enable: true, area: 900 } },
+        number: { value: 60, density: { enable: true, area: 1000 } },
         color: { value: ["#00f0ff","#8b5cf6"] },
         shape: { type: "circle" },
-        opacity: { value: 0.4 },
+        opacity: { value: 0.5 },
         size: { value: { min: 2, max: 6 } },
-        links: { enable: true, distance: 160, color: "#00f0ff", opacity: 0.1, width: 1 },
-        move: { enable: true, speed: 1.5, direction: "none", random: true, straight: false, outMode: "out" }
+        links: { enable: true, distance: 180, color: "#00f0ff", opacity: 0.15, width: 1 },
+        move: { enable: true, speed: 1.8, direction: "none", random: true, straight: false, outMode: "out" }
       },
       detectRetina: true
     });
