--- a/index.html
+++ b/index.html
@@ -1,162 +1,179 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kobe Lean P. Orteza — Welcome</title>
-  <style>
-    :root {
-      --bg: #070710;
-      --neon: #00f0ff;
-      --accent: #8b5cf6;
-      --glass: rgba(255,255,255,0.03);
-      --radius: 16px;
-      font-family: 'Inter', sans-serif;
-      color-scheme: dark;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kobe Lean P. Orteza — Welcome</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
 
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: radial-gradient(1200px 600px at 10% 10%, rgba(139,92,246,0.06), transparent),
-                  radial-gradient(800px 400px at 90% 90%, rgba(0,240,255,0.03), transparent),
-                  var(--bg);
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      perspective: 1000px;
-    }
+  :root {
+    --bg: #070710;
+    --neon: #00f0ff;
+    --accent: #8b5cf6;
+    --glass: rgba(255,255,255,0.05);
+    --radius: 20px;
+  }
 
-    /* Particles / AI floating nodes */
-    #particles-js {
-      position: fixed;
-      top:0; left:0;
-      width: 100%; height: 100%;
-      z-index: -1;
-      pointer-events: none;
-    }
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body, html {
+    width: 100%; height: 100%;
+    background: var(--bg);
+    overflow: hidden;
+    font-family: 'Orbitron', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 1200px;
+    color: #fff;
+  }
 
-    .start-card {
-      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.01));
-      border: 1px solid rgba(255,255,255,0.1);
-      padding: 50px 70px;
-      border-radius: var(--radius);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.8), 0 0 60px rgba(0,240,255,0.3);
-      text-align: center;
-      backdrop-filter: blur(12px);
-      transform-style: preserve-3d;
-      animation: fadeIn 1.2s ease forwards;
-      position: relative;
-      overflow: hidden;
-    }
+  /* Full-screen interactive canvas */
+  #canvas {
+    position: fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    z-index: -1;
+  }
 
-    /* Floating AI elements */
-    .floating-hex {
-      position: absolute;
-      width: 80px;
-      height: 80px;
-      border: 2px solid var(--neon);
-      clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0 50%);
-      opacity: 0.15;
-      animation: floatHex linear infinite;
-      transform-origin: center;
-    }
+  .start-card {
+    background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+    border: 1px solid rgba(0,240,255,0.3);
+    padding: 60px 80px;
+    border-radius: var(--radius);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 0 50px rgba(0,240,255,0.5), 0 10px 80px rgba(139,92,246,0.2);
+    text-align: center;
+    z-index: 2;
+    animation: fadeIn 1.5s ease forwards;
+    position: relative;
+  }
 
-    .floating-hex:nth-child(1) { top: 10%; left: 15%; animation-duration: 12s; }
-    .floating-hex:nth-child(2) { top: 70%; left: 25%; animation-duration: 16s; }
-    .floating-hex:nth-child(3) { top: 30%; left: 70%; animation-duration: 10s; }
-    .floating-hex:nth-child(4) { top: 50%; left: 50%; animation-duration: 14s; }
+  h1 {
+    font-size: 3.5rem;
+    color: var(--neon);
+    text-shadow: 0 0 20px var(--neon), 0 0 40px var(--accent);
+    margin-bottom: 16px;
+  }
 
-    @keyframes floatHex {
-      0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-30px) rotate(180deg); }
-      100% { transform: translateY(0) rotate(360deg); }
-    }
+  p {
+    font-size: 1.2rem;
+    color: rgba(230,238,248,0.7);
+    margin-bottom: 32px;
+  }
 
-    h1 {
-      margin: 0 0 16px;
-      font-size: 3rem;
-      color: var(--neon);
-      letter-spacing: 1px;
-      text-shadow: 0 0 12px var(--neon), 0 0 24px var(--accent);
-    }
+  .btn-enter {
+    padding: 16px 32px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    border-radius: 14px;
+    border: none;
+    cursor: pointer;
+    background: linear-gradient(90deg, var(--neon), var(--accent));
+    color: #070710;
+    box-shadow: 0 0 20px var(--neon), 0 0 40px var(--accent);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none;
+  }
+  .btn-enter:hover {
+    transform: translateY(-5px) scale(1.05);
+    box-shadow: 0 0 40px var(--neon), 0 0 80px var(--accent);
+  }
 
-    p {
-      margin: 8px 0 28px;
-      color: rgba(230,238,248,0.7);
-      font-weight: 500;
-    }
-
-    .btn-enter {
-      display: inline-block;
-      padding: 14px 28px;
-      border-radius: 14px;
-      font-weight: 700;
-      font-size: 1.1rem;
-      background: linear-gradient(90deg, var(--neon), var(--accent));
-      color: #071028;
-      border: none;
-      cursor: pointer;
-      text-decoration: none;
-      transition: transform .3s ease, box-shadow .3s ease;
-      box-shadow: 0 6px 20px rgba(0,240,255,0.3);
-    }
-
-    .btn-enter:hover {
-      transform: translateY(-5px) scale(1.05);
-      box-shadow: 0 12px 40px rgba(0,240,255,0.5);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  @keyframes fadeIn {
+    from { opacity:0; transform: translateY(30px); }
+    to { opacity:1; transform: translateY(0); }
+  }
+</style>
 </head>
 <body>
 
-  <div id="particles-js"></div>
+<canvas id="canvas"></canvas>
 
-  <div class="start-card">
-    <h1>Kobe Lean P. Orteza</h1>
-    <p>AI Engineering Student | Innovator • Robotics • Ethical AI</p>
-    <a class="btn-enter" href="main.html">Enter Portfolio</a>
+<div class="start-card">
+  <h1>Kobe Lean P. Orteza</h1>
+  <p>AI Engineering Student | Innovator • Robotics • Ethical AI</p>
+  <a class="btn-enter" href="main.html">Enter Portfolio</a>
+</div>
 
-    <!-- Floating AI hexes -->
-    <div class="floating-hex"></div>
-    <div class="floating-hex"></div>
-    <div class="floating-hex"></div>
-    <div class="floating-hex"></div>
-  </div>
+<script>
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+canvas.width = innerWidth;
+canvas.height = innerHeight;
 
-  <!-- tsparticles interactive nodes -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.13.1/tsparticles.bundle.min.js"></script>
-  <script>
-    tsParticles.load("particles-js", {
-      fpsLimit: 60,
-      interactivity: {
-        events: {
-          onHover: { enable: true, mode: "repulse" },
-          onClick: { enable: true, mode: "push" },
-          resize: true
-        },
-        modes: {
-          repulse: { distance: 150, duration: 0.4 },
-          push: { quantity: 4 }
-        }
-      },
-      particles: {
-        number: { value: 60, density: { enable: true, area: 1000 } },
-        color: { value: ["#00f0ff","#8b5cf6"] },
-        shape: { type: "circle" },
-        opacity: { value: 0.5 },
-        size: { value: { min: 2, max: 6 } },
-        links: { enable: true, distance: 180, color: "#00f0ff", opacity: 0.15, width: 1 },
-        move: { enable: true, speed: 1.8, direction: "none", random: true, straight: false, outMode: "out" }
-      },
-      detectRetina: true
-    });
-  </script>
+let particles = [];
+const colors = ['#00f0ff', '#8b5cf6', '#ffffff'];
+const particleCount = 120;
+
+// Particle class
+class Particle {
+  constructor() {
+    this.x = Math.random()*canvas.width;
+    this.y = Math.random()*canvas.height;
+    this.size = Math.random()*3 + 1;
+    this.speedX = (Math.random()-0.5)*1.5;
+    this.speedY = (Math.random()-0.5)*1.5;
+    this.color = colors[Math.floor(Math.random()*colors.length)];
+  }
+  update() {
+    this.x += this.speedX;
+    this.y += this.speedY;
+    if(this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+    if(this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+  }
+  draw() {
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+    ctx.fillStyle = this.color;
+    ctx.shadowColor = this.color;
+    ctx.shadowBlur = 10;
+    ctx.fill();
+  }
+}
+
+// Initialize particles
+for(let i=0;i<particleCount;i++){
+  particles.push(new Particle());
+}
+
+// Animate particles
+function animate(){
+  ctx.fillStyle = 'rgba(7,7,16,0.3)';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  // Draw and update particles
+  for(let i=0;i<particles.length;i++){
+    particles[i].update();
+    particles[i].draw();
+
+    // Connect particles with lines if close
+    for(let j=i;j<particles.length;j++){
+      let dx = particles[i].x - particles[j].x;
+      let dy = particles[i].y - particles[j].y;
+      let distance = Math.sqrt(dx*dx + dy*dy);
+      if(distance < 120){
+        ctx.beginPath();
+        ctx.strokeStyle = 'rgba(0,240,255,' + (1-distance/120) + ')';
+        ctx.lineWidth = 1;
+        ctx.moveTo(particles[i].x, particles[i].y);
+        ctx.lineTo(particles[j].x, particles[j].y);
+        ctx.stroke();
+      }
+    }
+  }
+
+  requestAnimationFrame(animate);
+}
+
+animate();
+
+// Resize canvas
+window.addEventListener('resize', ()=>{
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
+});
+</script>
+
 </body>
 </html>
