--- a/index.html
+++ b/index.html
@@ -1,179 +1,190 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Kobe Lean P. Orteza — Welcome</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
-
   :root {
     --bg: #070710;
     --neon: #00f0ff;
     --accent: #8b5cf6;
-    --glass: rgba(255,255,255,0.05);
-    --radius: 20px;
+    --glass: rgba(255,255,255,0.03);
+    --radius: 12px;
+    font-family: 'Orbitron', 'Inter', sans-serif;
   }
 
-  * { margin:0; padding:0; box-sizing:border-box; }
-  body, html {
-    width: 100%; height: 100%;
-    background: var(--bg);
+  html, body {
+    height: 100%;
+    margin: 0;
+    background: #070710;
     overflow: hidden;
-    font-family: 'Orbitron', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    perspective: 1200px;
-    color: #fff;
+    color: #e6eef8;
   }
 
-  /* Full-screen interactive canvas */
-  #canvas {
+  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
+
+  /* Particles container */
+  #particles-js {
     position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: -1;
+    pointer-events: none;
   }
 
   .start-card {
-    background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
-    border: 1px solid rgba(0,240,255,0.3);
-    padding: 60px 80px;
+    background: linear-gradient(180deg, var(--glass), rgba(255,255,255,0.02));
+    border: 1px solid rgba(255,255,255,0.04);
+    padding: 40px 60px;
     border-radius: var(--radius);
-    backdrop-filter: blur(12px);
-    box-shadow: 0 0 50px rgba(0,240,255,0.5), 0 10px 80px rgba(139,92,246,0.2);
+    box-shadow: 0 10px 40px rgba(11,12,20,0.6);
     text-align: center;
-    z-index: 2;
-    animation: fadeIn 1.5s ease forwards;
-    position: relative;
+    animation: fadeIn 1s ease forwards;
+    backdrop-filter: blur(12px);
   }
 
   h1 {
-    font-size: 3.5rem;
+    margin: 0;
+    font-size: 3rem;
+    letter-spacing: 2px;
     color: var(--neon);
-    text-shadow: 0 0 20px var(--neon), 0 0 40px var(--accent);
     margin-bottom: 16px;
+    text-shadow: 0 0 8px var(--neon), 0 0 16px var(--accent);
   }
 
   p {
-    font-size: 1.2rem;
+    margin: 8px 0 24px;
     color: rgba(230,238,248,0.7);
-    margin-bottom: 32px;
+    font-weight: 500;
   }
 
   .btn-enter {
-    padding: 16px 32px;
-    font-size: 1.2rem;
+    display: inline-block;
+    padding: 14px 28px;
+    border-radius: 12px;
     font-weight: 700;
-    border-radius: 14px;
+    background: linear-gradient(90deg, var(--neon), var(--accent));
+    color: #071028;
     border: none;
     cursor: pointer;
-    background: linear-gradient(90deg, var(--neon), var(--accent));
-    color: #070710;
-    box-shadow: 0 0 20px var(--neon), 0 0 40px var(--accent);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    font-size: 18px;
     text-decoration: none;
+    transition: transform .2s ease, box-shadow .2s ease;
   }
+
   .btn-enter:hover {
-    transform: translateY(-5px) scale(1.05);
-    box-shadow: 0 0 40px var(--neon), 0 0 80px var(--accent);
+    transform: translateY(-3px);
+    box-shadow: 0 12px 28px rgba(0,240,255,0.4);
   }
 
   @keyframes fadeIn {
-    from { opacity:0; transform: translateY(30px); }
-    to { opacity:1; transform: translateY(0); }
+    from {opacity:0; transform: translateY(20px);}
+    to {opacity:1; transform: translateY(0);}
+  }
+
+  /* Portal overlay */
+  #portal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background: radial-gradient(circle, #00f0ff 0%, #8b5cf6 60%, transparent 100%);
+    z-index: 999;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 1s ease, opacity 1s ease;
+    pointer-events: none;
+  }
+
+  #portal.active {
+    transform: translate(-50%, -50%) scale(50);
+    opacity: 1;
+  }
+
+  .start-card.transitioning {
+    animation: zoomOut 1s forwards;
+  }
+
+  @keyframes zoomOut {
+    0% { transform: scale(1); opacity:1; }
+    100% { transform: scale(0.3); opacity:0; }
   }
 </style>
 </head>
 <body>
 
-<canvas id="canvas"></canvas>
+<!-- Particles container -->
+<div id="particles-js"></div>
 
 <div class="start-card">
   <h1>Kobe Lean P. Orteza</h1>
   <p>AI Engineering Student | Innovator • Robotics • Ethical AI</p>
-  <a class="btn-enter" href="main.html">Enter Portfolio</a>
+  <a class="btn-enter" href="#" id="enterBtn">Enter Portfolio</a>
 </div>
 
+<!-- Portal overlay -->
+<div id="portal"></div>
+
+<!-- tsparticles -->
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.13.1/tsparticles.bundle.min.js"></script>
 <script>
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
-canvas.width = innerWidth;
-canvas.height = innerHeight;
-
-let particles = [];
-const colors = ['#00f0ff', '#8b5cf6', '#ffffff'];
-const particleCount = 120;
-
-// Particle class
-class Particle {
-  constructor() {
-    this.x = Math.random()*canvas.width;
-    this.y = Math.random()*canvas.height;
-    this.size = Math.random()*3 + 1;
-    this.speedX = (Math.random()-0.5)*1.5;
-    this.speedY = (Math.random()-0.5)*1.5;
-    this.color = colors[Math.floor(Math.random()*colors.length)];
-  }
-  update() {
-    this.x += this.speedX;
-    this.y += this.speedY;
-    if(this.x < 0 || this.x > canvas.width) this.speedX *= -1;
-    if(this.y < 0 || this.y > canvas.height) this.speedY *= -1;
-  }
-  draw() {
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-    ctx.fillStyle = this.color;
-    ctx.shadowColor = this.color;
-    ctx.shadowBlur = 10;
-    ctx.fill();
-  }
-}
-
-// Initialize particles
-for(let i=0;i<particleCount;i++){
-  particles.push(new Particle());
-}
-
-// Animate particles
-function animate(){
-  ctx.fillStyle = 'rgba(7,7,16,0.3)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-
-  // Draw and update particles
-  for(let i=0;i<particles.length;i++){
-    particles[i].update();
-    particles[i].draw();
-
-    // Connect particles with lines if close
-    for(let j=i;j<particles.length;j++){
-      let dx = particles[i].x - particles[j].x;
-      let dy = particles[i].y - particles[j].y;
-      let distance = Math.sqrt(dx*dx + dy*dy);
-      if(distance < 120){
-        ctx.beginPath();
-        ctx.strokeStyle = 'rgba(0,240,255,' + (1-distance/120) + ')';
-        ctx.lineWidth = 1;
-        ctx.moveTo(particles[i].x, particles[i].y);
-        ctx.lineTo(particles[j].x, particles[j].y);
-        ctx.stroke();
+  tsParticles.load("particles-js", {
+    fpsLimit: 60,
+    interactivity: {
+      events: {
+        onHover: { enable: true, mode: "repulse" },
+        onClick: { enable: true, mode: "push" },
+        resize: true
+      },
+      modes: {
+        repulse: { distance: 150, duration: 0.4 },
+        push: { quantity: 6 }
       }
-    }
-  }
+    },
+    particles: {
+      number: { value: 80, density: { enable: true, area: 900 } },
+      color: { value: ["#00f0ff","#8b5cf6","#ffffff"] },
+      shape: { type: "circle" },
+      opacity: { value: 0.5 },
+      size: { value: { min: 2, max: 6 } },
+      links: { enable: true, distance: 180, color: "#00f0ff", opacity: 0.15, width: 1 },
+      move: { enable: true, speed: 2, direction: "none", random: true, straight: false, outMode: "out" }
+    },
+    detectRetina: true
+  });
 
-  requestAnimationFrame(animate);
-}
+  // Portal transition
+  const enterBtn = document.getElementById('enterBtn');
+  const portal = document.getElementById('portal');
+  const card = document.querySelector('.start-card');
 
-animate();
+  enterBtn.addEventListener('click', (e)=>{
+    e.preventDefault();
 
-// Resize canvas
-window.addEventListener('resize', ()=>{
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
-});
+    // Start portal animation
+    portal.classList.add('active');
+
+    // Card zoom/fade effect
+    card.classList.add('transitioning');
+
+    // Add particles swirling effect
+    tsParticles.domItem(0).particles.array.forEach(p => {
+      p.velocity.horizontal += (Math.random()-0.5)*5;
+      p.velocity.vertical += (Math.random()-0.5)*5;
+    });
+
+    // Redirect after 1s
+    setTimeout(()=>{
+      window.location.href = 'main.html';
+    }, 1000);
+  });
 </script>
-
 </body>
 </html>
