--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     perspective: 1200px;
-    color: #fff;
+    color: #0c1533;
   }
 
   #canvas {
