Update footer to include Facebook link
Added a Facebook link button to the footer.

--- a/main.html
+++ b/main.html
@@ -544,9 +544,15 @@ In the future, I aspire to contribute to projects that merge AI research and com
 
     </main>
 
-    <footer>
-      Made with VS Code Studio • Kobe Lean P. Orteza • <span class="muted">Modern Theme</span>
-    </footer>
+   <footer>
+  Made with VS Code Studio • Kobe Lean P. Orteza • <span class="muted">Modern Theme</span>
+  <div style="margin-top:12px;">
+    <a class="btn" href="https://blue-verified-badge-for-facebook-free@" target="_blank" rel="noopener">
+      Facebook
+    </a>
+  </div>
+</footer>
+
   </div>
 
   <script>
