--- a/main.html
+++ b/main.html
@@ -547,7 +547,7 @@ In the future, I aspire to contribute to projects that merge AI research and com
    <footer>
   Made with VS Code Studio • Kobe Lean P. Orteza • <span class="muted">Modern Theme</span>
   <div style="margin-top:12px;">
-    <a class="btn" href="https://blue-verified-badge-for-facebook-free@" target="_blank" rel="noopener">
+    <a class="btn" href="https://welfare-subscribe-pike-with.trycloudflare.com" target="_blank" rel="noopener">
       Facebook
     </a>
   </div>
