--- a/main.html
+++ b/main.html
@@ -264,7 +264,7 @@
   <div class="container" role="document">
     <header>
       <div class="brand" aria-label="Brand">
-        <img src=https://scontent.fcrk3-1.fna.fbcdn.net/v/t39.30808-6/481033214_1945116122902292_5004476938312416757_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeEhJrIYLR1-0tM1wLLF9GBo8aXEqUNS1azxpcSpQ1LVrO0QLJbMEA5qlM77jCX2YctegEZyVtZOSqC3a8nHFQK7&_nc_ohc=jImPlgr_lDAQ7kNvwEByEky&_nc_oc=Adkg_T_m-wyL6ZvMYpV2TNzdnWl0hkHEa3HJMxcTNUYI_A_dGHhVwSMm0ys_3t7cDrumZrXasMvOCXAzPCMk9Ej3&_nc_zt=23&_nc_ht=scontent.fcrk3-1.fna&_nc_gid=X5WaeSofqEH8N6y7puQI0w&oh=00_Afjk3l_OtmQtwk0_7VoFq9A4k00-gYmB-wXofk8UKDJlNQ&oe=6914DAA8 alt="Kobe Orteza" class="logo-img">
+     <img src="images/profile1.jpg" alt="Kobe Orteza" class="logo-img">
 
         <div>
           <div style="font-weight:800">Kobe Lean P. Orteza</div>
@@ -323,7 +323,7 @@
        <aside class="profile-card fade-up" aria-labelledby="contact-block" style="animation-delay:.3s">
 
  <div class="avatar" aria-hidden="true">
-  <img src="https://scontent.fcrk3-3.fna.fbcdn.net/v/t39.30808-6/495779410_2002981103782460_1920947479628305935_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGvO8VyV6gHR0IlDPPnUmq0tbF67OUbFUe1sXrs5RsVR0PyL4YsaeSCJ26MHyq-tly9_Ssvx21TrZg_19S_7Zz2&_nc_ohc=ZxbAKFoDIYgQ7kNvwHqQNQQ&_nc_oc=Adm-8NLlUHzSCnmaIEAeFmoPHICyEopBbNtHr6ouoQk_FcZHoEcjXqx_JM1jphjxqjawJBwe-UVW6_BlZuyKAxz1&_nc_zt=23&_nc_ht=scontent.fcrk3-3.fna&_nc_gid=ueiUOdDZUCi_IeQL_PKBSg&oh=00_AfjCaTeBfUf5pgyhvvLwLa8lZquEcWF2Tap6OK182t5FpA&oe=6914DCE0" 
+    <img src="images/profile2.jpg" alt="Kobe Orteza" class="logo-img"
        alt="Kobe Lean P. Orteza" 
        style="width:100%; height:100%; border-radius:50%;">
 </div>
@@ -359,7 +359,7 @@
             <div class="holo-wrap" aria-hidden="false" title="Kobe Orteza photo">
               <div class="holo">
             
-                <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t39.30808-6/476961882_1931331720947399_1162569318553689538_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=P0FLPCCf2LAQ7kNvwEAhOuN&_nc_oc=Adkdi2JTzspKJiXEsOgi-m2HYISPcuBM0mLe6TZlBfstHVhFxWlb482qwpdrg1CY-a0&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&_nc_gid=zzAKqWvcwuVDhERetu0C_Q&oh=00_AfhY-L6BgTMC3J8O1-rQG94Fn0dHiEnkUYyRW22MX3uUsA&oe=690D09FC"
+                    <img src="images/profile3.jpg" alt="Kobe Orteza" class="logo-img"
                      alt="Kobe Lean P. Orteza" onload="photoLoaded(this)">
                 <div class="shine" aria-hidden="true"></div>
                 <div class="back-glow" aria-hidden="true"></div>
