--- a/main.html
+++ b/main.html
@@ -264,7 +264,7 @@
   <div class="container" role="document">
     <header>
       <div class="brand" aria-label="Brand">
-     <img src="images/profile1.jpg" alt="Kobe Orteza" class="logo-img">
+     <img src="images/profile1.png" alt="Kobe Orteza" class="logo-img">
 
         <div>
           <div style="font-weight:800">Kobe Lean P. Orteza</div>
@@ -323,7 +323,7 @@
        <aside class="profile-card fade-up" aria-labelledby="contact-block" style="animation-delay:.3s">
 
  <div class="avatar" aria-hidden="true">
-    <img src="images/profile2.jpg" alt="Kobe Orteza" class="logo-img"
+    <img src="images/profile2.png" alt="Kobe Orteza" class="logo-img"
        alt="Kobe Lean P. Orteza" 
        style="width:100%; height:100%; border-radius:50%;">
 </div>
@@ -359,7 +359,7 @@
             <div class="holo-wrap" aria-hidden="false" title="Kobe Orteza photo">
               <div class="holo">
             
-                    <img src="images/profile3.jpg" alt="Kobe Orteza" class="logo-img"
+                    <img src="images/profile3.png" alt="Kobe Orteza" class="logo-img"
                      alt="Kobe Lean P. Orteza" onload="photoLoaded(this)">
                 <div class="shine" aria-hidden="true"></div>
                 <div class="back-glow" aria-hidden="true"></div>
