--- a/main.html
+++ b/main.html
@@ -302,8 +302,9 @@
             <div class="card fade-up" style="animation-delay:.14s">
               <div class="small muted">Education</div>
               <div style="font-weight:700;margin-top:6px">BS Artificial Intelligence Engineering</div>
-              <div class="small muted">Mapúa University — Senior High → College</div>
-              <div class="small muted" style="margin-top:6px"><strong>Expected Graduation:</strong> 2025–2029</div>
+              <div class="small muted">Mapúa University — College</div>
+              <div class="small muted">USL Tuguegarao — SHS</div>
+              <div class="small muted" style="margin-top:6px"><strong>Expected Graduation:</strong> 2023–2029</div>
             </div>
 
             <div class="card fade-up" style="animation-delay:.22s">
@@ -312,7 +313,7 @@
                 <span class="pill">Python</span>
                 <span class="pill">C++ / Arduino</span>
                 <span class="pill">Flutter</span>
-                <span class="pill">Firebase</span>
+                <span class="pill">OpenCV</span>
                 <span class="pill">ML / PyTorch</span>
               </div>
             </div>
@@ -332,11 +333,11 @@
 <div class="small muted" style="margin-top:6px;">BS AI Engineering • Mapúa University</div>
 
 <div id="contact-block" class="contact-list" role="contentinfo" style="margin-top:12px;">
-  <div class="small muted">📍 Manila, Philippines</div>
+  <div class="small muted"> Manila, Philippines</div>
   <div class="small" style="margin-top:4px;">
-    ✉️ <a class="code" href="mailto:kobeazetro@gmail.com">kobeazetro@gmail.com</a><br>
-    📱 <a class="code" href="tel:+639564816314">0956 481 6314</a><br>
-    🔗 <a class="code" href="https://github.com/KobeOrteza" target="_blank" rel="noopener">Git: KobeOrteza</a>
+     <a class="code" href="mailto:kobeazetro@gmail.com">kobeazetro@gmail.com</a><br>
+     <a class="code" href="tel:+639564816314">0956 481 6314</a><br>
+     <a class="code" href="https://github.com/KobeOrteza" target="_blank" rel="noopener">Git: KobeOrteza</a>
   </div>
 
   <!-- Contact button below the contacts -->
@@ -366,7 +367,7 @@
               </div>
             </div>
 
-            <div class="small muted" style="margin-top:8px">Photo — About section only</div>
+            <div class="small muted" style="margin-top:8px">Kobe Lean Orteza (Azi)</div>
           </div>
 
           <div style="flex:1;min-width:260px">
