Revamp reflections section styling and layout
Updated the reflections section with new styles and layout.

--- a/main.html
+++ b/main.html
@@ -235,30 +235,53 @@
   box-shadow: 0 0 8px rgba(0, 234, 255, 0.6);
 }
 
+  <section id="reflections" class="reflections-section">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Playfair+Display:ital,wght@0,500;1,500&display=swap');
+
     .reflections-section {
-  max-width: 900px;
-  margin: 80px auto;
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 20px;
-  padding: 40px;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
-  line-height: 1.8;
-}
+      max-width: 900px;
+      margin: 100px auto;
+      padding: 60px 30px;
+      background: #0b0b0f;
+      border-radius: 20px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+      color: #f5f5f5;
+      font-family: 'Poppins', sans-serif;
+      line-height: 1.8;
+      letter-spacing: 0.3px;
+    }
 
-.reflections-section h2 {
-  text-align: center;
-  margin-bottom: 25px;
-  font-size: 1.3rem;
-}
+    .reflections-section h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5rem;
+      text-align: center;
+      margin-bottom: 30px;
+      color: #00f0ff;
+      letter-spacing: 1px;
+    }
 
-.reflections-section p {
-  margin-bottom: 20px;
-  color: #e6e6e6;
-}
+    .reflections-section p {
+      font-size: 1.05rem;
+      margin-bottom: 20px;
+      text-align: justify;
+    }
 
+    .reflections-section strong {
+      color: #00e0c6;
+    }
 
-    
-</style>
+    .reflections-section em {
+      font-family: 'Playfair Display', serif;
+      color: #cccccc;
+    }
+
+    .reflections-section p:last-child {
+      text-align: right;
+      margin-top: 40px;
+      font-style: italic;
+    }
+  </style>
 </head>
 <body>
   <div class="container" role="document">
@@ -395,7 +418,7 @@
 
 
       <section id="reflections" class="reflections-section">
-  <h2>Reflections</h2>
+ <h2>Reflections</h2>
   <p>
     When I first entered the <strong>BS Artificial Intelligence Engineering</strong> program at <strong>Mapúa University</strong>, I honestly didn’t know what to expect. I had always been fascinated by robotics, programming, and creative technology — but college brought a deeper layer of discipline, collaboration, and purpose to that fascination. Every week feels like a balance between curiosity and challenge, as I learn to combine mathematical logic with human-centered thinking. 
   </p>
