--- a/main.html
+++ b/main.html
@@ -235,7 +235,7 @@
   box-shadow: 0 0 8px rgba(0, 234, 255, 0.6);
 }
 
-  <section id="reflections" class="reflections-section">
+<section id="reflections" class="reflections-section">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Playfair+Display:ital,wght@0,500;1,500&display=swap');
 
@@ -420,19 +420,22 @@
       <section id="reflections" class="reflections-section">
  <h2>Reflections</h2>
   <p>
-    When I first entered the <strong>BS Artificial Intelligence Engineering</strong> program at <strong>Mapúa University</strong>, I honestly didn’t know what to expect. I had always been fascinated by robotics, programming, and creative technology — but college brought a deeper layer of discipline, collaboration, and purpose to that fascination. Every week feels like a balance between curiosity and challenge, as I learn to combine mathematical logic with human-centered thinking. 
+    When I first entered the <strong>BS Artificial Intelligence Engineering</strong> program at <strong>Mapúa University</strong>, I honestly didn’t know what to expect. I had always been fascinated by robotics, programming, and creative technology — but college added a deeper layer of discipline, collaboration, and purpose to that fascination. Every week feels like a balance between curiosity and challenge as I learn to combine mathematical logic with human-centered thinking.
   </p>
   <p>
-    At first, I was intimidated by how fast-paced the environment at Mapúa can be. The coursework, the deadlines, and the expectations — they can be tough. But over time, I realized that this pressure trains us to think critically and manage time like real engineers. My professors constantly remind us that AI Engineering isn’t just about algorithms or code; it’s about <em>building systems that understand people</em>. That idea reshaped the way I see the field — not just as a technical discipline, but as a creative and ethical one.
+    At first, I was intimidated by how fast-paced the environment at Mapúa can be. The coursework, the deadlines, and the expectations — they can all be tough. But over time, I realized that this kind of pressure shapes us into thinkers who can manage complexity and time like real engineers. My professors often remind us that AI Engineering isn’t just about algorithms or code — it’s about <em>building systems that understand people</em>. That idea changed how I view the field: not just as a technical discipline, but as a creative and ethical one.
   </p>
   <p>
-    One of my favorite experiences so far has been collaborating with classmates on simple prototypes that use sensors, machine learning concepts, and design thinking. It’s always exciting to see something go from an idea on paper to a working demo. The process can be messy — code errors, hardware malfunctions, and sleepless debugging nights — but when things finally work, there’s a sense of accomplishment that makes it all worth it. These small victories remind me why I chose this path: to create, to learn, and to innovate.
+    We haven’t made any prototypes yet since we’re still focused on programming fundamentals, AI engineering ethics and discipline, and other foundational subjects like math, chemistry, P.E., general education, and chemistry lab. But even at this stage, I can already see how each subject connects to the bigger picture — preparing us for real-world AI applications and hands-on innovation in the near future.
   </p>
   <p>
-    Beyond the technical side, I’ve also learned how vital creativity and empathy are in this field. AI is not just about building smarter machines — it’s about building <strong>better futures</strong>. I’ve grown to appreciate how art and engineering can complement each other. Designing interfaces, writing about projects, and expressing ideas visually are just as important as writing efficient code. I think that’s what makes AI Engineering at Mapúa so special — it trains us to be holistic thinkers, not just programmers.
+    One of the things I’m most excited about is the opportunity to eventually collaborate with my classmates on projects that combine sensors, machine learning, and design thinking. I know that the process might be messy — with code errors, hardware issues, and long nights of debugging — but I look forward to those moments of learning and discovery. Those experiences will remind me why I chose this path: to create, to learn, and to innovate.
   </p>
   <p>
-    As I continue my journey, I hope to explore more about <strong>ethical AI</strong>, robotics, and human-computer interaction. I want to design technologies that don’t just automate tasks, but truly help people — especially in education, accessibility, and healthcare. My goal is to carry the lessons I learn here into real-world projects that reflect compassion, curiosity, and purpose. This portfolio is a small reflection of that mission: to grow as an engineer, artist, and innovator, all at once.
+    Beyond the technical side, I’ve also learned how vital creativity and empathy are in this field. AI isn’t just about building smarter machines — it’s about building <strong>better futures</strong>. I’ve grown to appreciate how art and engineering can complement each other. Designing interfaces, writing about projects, and expressing ideas visually are just as important as writing efficient code. That’s what makes AI Engineering at Mapúa so special — it trains us to be holistic thinkers, not just programmers.
+  </p>
+  <p>
+    As I continue my journey, I hope to explore more about <strong>ethical AI</strong>, robotics, and human-computer interaction. I want to design technologies that don’t just automate tasks, but genuinely help people — especially in education, accessibility, and healthcare. My goal is to carry the lessons I learn here into real-world projects that reflect compassion, curiosity, and purpose. This portfolio is a reflection of that mission: to grow as an engineer, artist, and innovator, all at once.
   </p>
   <p>
     <em>— Written by Kobe Lean P. Orteza, 1st Year AI Engineering Student, Mapúa University</em>
